# MumbaiHacks

./: .env.example  .gitignore  README.md  main.py  run_computer_mcp.py  test_api.py
Backend/: .gitignore  README.md  build_trees.py  requirements.txt  run_mcp.py
Backend/app/: main.py
Backend/app/knowledge-graph/: KG_full.py  query_KG.ipynb  utils.py
Backend/app/models/: response.py
Backend/app/prompts/: structure_aware_rag_prompt.py
Backend/app/providers/: base.py  cerebras_provider.py  gemini_provider.py  groq_provider.py  lmstudio_provider.py
Backend/mcp_server/: computer_server.py  main.py
Backend/mcp_server/tools/: __init__.py  rag_pipeline_mcp.py
Backend/screener-api/: credentials.py  pyproject.toml  query_service.py  requirements.txt  run_server.py  schemas.py  server.py
Backend/screener_server/: credentials.py  requirements.txt  scraper.py  server.py  test_api.py
Backend/scripts/decision_tree/: convert_json_to_flowchart.py  convert_json_to_mermaid.py  json_to_mermaid.py
Frontend/lib/config/: footer.ts
app/api/v1/: router.py
app/config/: settings.py
app/knowledge-graph/: create_KG.ipynb  requirements.txt
app/knowledge-graph/v1/: config.py  document_processor.py  graph_builder.py  ingest_extracted.py  pipeline.py  query_api_client.py
app/models/: request.py
app/prompts/: traditional_rag_prompt.py
app/providers/: factory.py  openai_provider.py  openrouter_provider.py
app/tools/: __init__.py
mcp_server/: server.py
mcp_server/config/: __init__.py  mcp_settings.py
scripts/decision_tree/: json_to_flowchart.py
(+55 files in other folders)
